--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.5",
-    "@react-three/drei": "9.51.21",
+    "@react-three/drei": "^9.51.21",
     "@react-three/fiber": "8.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,7 +20,9 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "antd": "^5.1.6",
+    "camera-controls": "^2.0.1",
     "csx": "10.0.2",
+    "gsap": "^3.11.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
